Use more Number.valueOf instead of creating new values all the time.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@672703 13f79535-47bb-0310-9956-ffa450edef68